Modified Images Path

--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
                     <h2 style="padding-left: 10px;">Easy Updates For Elevated Spaces</h2>
                 </div>
                 <div class="first-block">
-                    <div class="first-img" style="background-image: url(Box-3\(1\).jpg); margin-bottom: -5px;"><div class="img-name">Baskets & Hampers</div></div>
-                    <div class="second-img" style="background-image: url(Box-3\(2\).jpg);"><div class="img-name">Hardware</div></div>
+                    <div class="first-img" style="background-image: url(/Photos/Box-3\(1\).jpg); margin-bottom: -5px;"><div class="img-name">Baskets & Hampers</div></div>
+                    <div class="second-img" style="background-image: url(/Photos/Box-3\(2\).jpg);"><div class="img-name">Hardware</div></div>
                 </div>
                 <div class="second-block">
-                    <div class="third-img" style="background-image: url(Box-3\(3\).jpg);"><div class="img-name">Accent Furniture</div></div>
-                    <div class="forth-img" style="background-image: url(Box-3\(4\).jpg);"><div class="img-name">Wallpaper & Paint</div></div>
+                    <div class="third-img" style="background-image: url(/Photos/Box-3\(3\).jpg);"><div class="img-name">Accent Furniture</div></div>
+                    <div class="forth-img" style="background-image: url(/Photos/Box-3\(4\).jpg);"><div class="img-name">Wallpaper & Paint</div></div>
                 </div>
                 <a href="#" style="padding-left: 10px; text-decoration: none;">Shop Home Products</a>
             </div>
@@ -158,12 +158,12 @@
                     <h2 style="padding-left: 10px;">Refresh Your Space</h2>
                 </div>
                 <div class="first-block">
-                    <div class="first-img" style="background-image: url(Box-4\(1\).jpg);"><div class="img-name">Dining</div></div>
-                    <div class="second-img" style="background-image: url(Box-4\(2\).jpg);"><div class="img-name">Home</div></div>
+                    <div class="first-img" style="background-image: url(/Photos/Box-4\(1\).jpg);"><div class="img-name">Dining</div></div>
+                    <div class="second-img" style="background-image: url(/Photos/Box-4\(2\).jpg);"><div class="img-name">Home</div></div>
                 </div>
                 <div class="second-block">
-                    <div class="third-img" style="background-image: url(Box-4\(3\).jpg);"><div class="img-name">Kitchen</div></div>
-                    <div class="forth-img" style="background-image: url(Box-4\(4\).jpg);"><div class="img-name">Health & Beauty</div></div>
+                    <div class="third-img" style="background-image: url(/Photos/Box-4\(3\).jpg);"><div class="img-name">Kitchen</div></div>
+                    <div class="forth-img" style="background-image: url(/Photos/Box-4\(4\).jpg);"><div class="img-name">Health & Beauty</div></div>
                 </div>
                 <a href="#" style="padding-left: 10px; text-decoration: none;">See more</a>
             </div>
@@ -175,12 +175,12 @@
                     <h2 style="padding-left: 10px;">Fashion Trends You Like</h2>
                 </div>
                 <div class="first-block">
-                    <div class="first-img" style="background-image: url(Box-5\(1\).jpg);"><div class="img-name">Dresses</div></div>
-                    <div class="second-img" style="background-image: url(Box-5\(2\).jpg);"><div class="img-name">Knits</div></div>
+                    <div class="first-img" style="background-image: url(/Photos/Box-5\(1\).jpg);"><div class="img-name">Dresses</div></div>
+                    <div class="second-img" style="background-image: url(/Photos/Box-5\(2\).jpg);"><div class="img-name">Knits</div></div>
                 </div>
                 <div class="second-block">
-                    <div class="third-img" style="background-image: url(Box-5\(3\).jpg);"><div class="img-name">Jackets</div></div>
-                    <div class="forth-img" style="background-image: url(Box-5\(4\).jpg);"><div class="img-name">Jewelry</div></div>
+                    <div class="third-img" style="background-image: url(/Photos/Box-5\(3\).jpg);"><div class="img-name">Jackets</div></div>
+                    <div class="forth-img" style="background-image: url(/Photos/Box-5\(4\).jpg);"><div class="img-name">Jewelry</div></div>
                 </div>
                 <a href="#" style="padding-left: 10px; text-decoration: none;">Explore More</a>
             </div>
@@ -192,12 +192,12 @@
                     <h2 style="padding-left: 10px;">Shop For Your Home Essentials</h2>
                 </div>
                 <div class="first-block">
-                    <div class="first-img" style="background-image: url(Box-6\(1\).jpg);"><div class="img-name">Cleaning Tools</div></div>
-                    <div class="second-img" style="background-image: url(Box-6\(2\).jpg);"><div class="img-name">Home Storage</div></div>
+                    <div class="first-img" style="background-image: url(/Photos/Box-6\(1\).jpg);"><div class="img-name">Cleaning Tools</div></div>
+                    <div class="second-img" style="background-image: url(/Photos/Box-6\(2\).jpg);"><div class="img-name">Home Storage</div></div>
                 </div>
                 <div class="second-block">
-                    <div class="third-img" style="background-image: url(Box-6\(3\).jpg);"><div class="img-name">Home Decor</div></div>
-                    <div class="forth-img" style="background-image: url(Box-6\(4\).jpg);"><div class="img-name">Bedding</div></div>
+                    <div class="third-img" style="background-image: url(/Photos/Box-6\(3\).jpg);"><div class="img-name">Home Decor</div></div>
+                    <div class="forth-img" style="background-image: url(/Photos/Box-6\(4\).jpg);"><div class="img-name">Bedding</div></div>
                 </div>
                 <a href="#" style="padding-left: 10px; text-decoration: none;">Discover more In Home</a>
             </div>
@@ -209,12 +209,12 @@
                     <h2 style="padding-left: 10px;">Shop Fashion For Less</h2>
                 </div>
                 <div class="first-block">
-                    <div class="first-img" style="background-image: url(Box-7\(1\).jpg);"><div class="img-name">Jeans Under $50</div></div>
-                    <div class="second-img" style="background-image: url(Box-7\(2\).jpg);"><div class="img-name">Tops Under $25</div></div>
+                    <div class="first-img" style="background-image: url(/Photos/Box-7\(1\).jpg);"><div class="img-name">Jeans Under $50</div></div>
+                    <div class="second-img" style="background-image: url(/Photos/Box-7\(2\).jpg);"><div class="img-name">Tops Under $25</div></div>
                 </div>
                 <div class="second-block">
-                    <div class="third-img" style="background-image: url(Box-7\(3\).jpg);"><div class="img-name">Dresses Under $30</div></div>
-                    <div class="forth-img" style="background-image: url(Box-7\(4\).jpg);"><div class="img-name">Shoes Under $50</div></div>
+                    <div class="third-img" style="background-image: url(/Photos/Box-7\(3\).jpg);"><div class="img-name">Dresses Under $30</div></div>
+                    <div class="forth-img" style="background-image: url(/Photos/Box-7\(4\).jpg);"><div class="img-name">Shoes Under $50</div></div>
                 </div>
                 <a href="#" style="padding-left: 10px; text-decoration: none;">See All Deals</a>
             </div>
@@ -226,12 +226,12 @@
                     <h2 style="padding-left: 10px;">Elevate Your Electronics</h2>
                 </div>
                 <div class="first-block">
-                    <div class="first-img" style="background-image: url(Box-8\(1\).jpg);"><div class="img-name">Headphones</div></div>
-                    <div class="second-img" style="background-image: url(Box-8\(2\).jpg);"><div class="img-name">Tablets</div></div>
+                    <div class="first-img" style="background-image: url(/Photos/Box-8\(1\).jpg);"><div class="img-name">Headphones</div></div>
+                    <div class="second-img" style="background-image: url(/Photos/Box-8\(2\).jpg);"><div class="img-name">Tablets</div></div>
                 </div>
                 <div class="second-block">
-                    <div class="third-img" style="background-image: url(Box-8\(3\).jpg);"><div class="img-name">Gaming</div></div>
-                    <div class="forth-img" style="background-image: url(Box-8\(4\).jpg);"><div class="img-name">Speakers</div></div>
+                    <div class="third-img" style="background-image: url(/Photos/Box-8\(3\).jpg);"><div class="img-name">Gaming</div></div>
+                    <div class="forth-img" style="background-image: url(/Photos/Box-8\(4\).jpg);"><div class="img-name">Speakers</div></div>
                 </div>
                 <a href="#" style="padding-left: 10px; text-decoration: none;">Discover more</a>
             </div>
