--- a/index.html
+++ b/index.html
@@ -316,15 +316,8 @@
         <!-- footer 5 -->
 
         <div class="footer-5">
-            <div class="content-1">
-                <div class="one" style="margin: 10px;">conditions Of use</div>
-                <div class="two" style="margin: 10px;">privacy notice</div>
-                <div class="three" style="margin: 10px;">Consumer Health Data Privacy Disclosure</div>
-                <div class="four" style="margin: 10px;">your Ads Privacy Choices</div>
-            </div>
-
             <div class="content-2">
-                <div class="final">© 1996-2025, Amazon.com, Inc. or its affiliates</div>
+                <div class="final">DISCLAIMER: THIS PAGE WAS MADE AS A PERSONAL EDUCATIONAL PROJECT. This is NOT the official site of the company or brand identified on the page. The creator of this page is NOT affiliated with the company or brand in any way. This page is a personal project made in connection with an educational exercise.</div>
             </div>
         </div>
     </footer>
